--- a/recipes/crepes.html
+++ b/recipes/crepes.html
@@ -175,7 +175,7 @@ It's stepping out of (metaphysical) bounds. -->
 
  <p>Brain (which is you) = Y</p>
  
- <p>The Eye (which directly contacts the outside world) = E </p>
+ <p>The Eye (which is direct contact with the outside world) = E </p>
  
  <p>When we connect Y and E we get You having direct contact with the outside world. Light from the outside world pours into the eye, actually inside the skull, and thus gets to you, the brain, because it is physically connected to the eye, and so you experience reality immediately, instantly, and directly. It is irrelevant as to how you process the light and information, the point is that you are getting it directly from the outside world, and that is true beyond question. You perceive light directly from the outside world via the eye. The light literally goes inside of your skull, via the eye, which is directly connected to your brain, and your brain does its thing. The idea that you, that is to say, the brain, never has contact with the outside world is thus absurd, and completely defeated. The brain is you, and the brain is demonstrably, clearly connected to the eye, which has the outside world pouring into it. Only if the eye was not connected to the brain, and the brain saw what the eye sees through a second eye connected to the brain, like in the example above, might we say that the brain never has direct contact with the outside world.</p>
 
